objects/Credit_Reference_OLD__c.object
<CustomObject>
    <description>Credit reference data</description>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advertiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advertiser</label>
        <referenceTo>Advertiser__c</referenceTo>
        <relationshipName>Credit_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Days_to_Pay__c</fullName>
        <label>Average Days to Pay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Agency__c</fullName>
        <label>Booking Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Credit_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brands</label>
        <referenceTo>Brands__c</referenceTo>
        <relationshipName>Credit_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_App_Type__c</fullName>
        <inlineHelpText>Use drop down to identify primary party for this credit app</inlineHelpText>
        <label>Credit App Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Advertiser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Terms_Comments__c</fullName>
        <label>Credit Terms Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <label>Credit Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIA</fullName>
                </value>
                <value>
                    <fullName>Due on Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Length_of_Business__c</fullName>
        <label>Length of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 Year</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3-5 Years</fullName>
                </value>
                <value>
                    <fullName>5-10 Years</fullName>
                </value>
                <value>
                    <fullName>Greater than 10 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Amount_of_Credit__c</fullName>
        <label>Max Amount of Credit Given</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Owed__c</fullName>
        <label>Max Owed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mode_Sent__c</fullName>
        <label>Mode Sent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reference_Company__c</fullName>
        <label>Reference Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Reference_ID__c</fullName>
        <formula>&quot;(ref:&quot;&amp;Id&amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Reference ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Reference OLD</label>
    <listViews>
        <fullName>All_Credit_Ref</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Advertiser__c</columns>
        <columns>Credit_App_Type__c</columns>
        <columns>NAME</columns>
        <columns>Reference_Company__c</columns>
        <columns>Booking_Agency__c</columns>
        <columns>Brand__c</columns>
        <columns>Length_of_Business__c</columns>
        <columns>Credit_Terms__c</columns>
        <columns>Average_Days_to_Pay__c</columns>
        <columns>Max_Amount_of_Credit__c</columns>
        <columns>Max_Owed__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Credit Ref</label>
    </listViews>
    <listViews>
        <fullName>All_w_Type</fullName>
        <columns>Credit_App_Type__c</columns>
        <columns>NAME</columns>
        <columns>Reference_Company__c</columns>
        <columns>Booking_Agency__c</columns>
        <columns>Advertiser__c</columns>
        <columns>Length_of_Business__c</columns>
        <columns>Credit_Terms_Comments__c</columns>
        <columns>Average_Days_to_Pay__c</columns>
        <columns>Max_Amount_of_Credit__c</columns>
        <columns>Max_Owed__c</columns>
        <columns>Brand__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credit_App_Type__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All w/ Type</label>
    </listViews>
    <listViews>
        <fullName>EM_Advertising</fullName>
        <columns>NAME</columns>
        <columns>Contact_Person__c</columns>
        <columns>Title__c</columns>
        <columns>Credit_Terms_Comments__c</columns>
        <columns>Max_Amount_of_Credit__c</columns>
        <columns>Average_Days_to_Pay__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booking_Agency__c</field>
            <operation>contains</operation>
            <value>em advertising</value>
        </filters>
        <label>EM Advertising</label>
    </listViews>
    <listViews>
        <fullName>Publisher_s_Clearing_House</fullName>
        <columns>NAME</columns>
        <columns>Booking_Agency__c</columns>
        <columns>Brand__c</columns>
        <columns>Contact_Person__c</columns>
        <columns>Title__c</columns>
        <columns>Credit_Terms_Comments__c</columns>
        <columns>Max_Amount_of_Credit__c</columns>
        <columns>Average_Days_to_Pay__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>contains</operation>
            <value>publisher</value>
        </filters>
        <label>Publisher&apos;s Clearing House</label>
    </listViews>
    <listViews>
        <fullName>Pulaski_middleman</fullName>
        <columns>NAME</columns>
        <columns>Contact_Person__c</columns>
        <columns>Title__c</columns>
        <columns>Credit_Terms_Comments__c</columns>
        <columns>Max_Amount_of_Credit__c</columns>
        <columns>Average_Days_to_Pay__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Booking_Agency__c</field>
            <operation>contains</operation>
            <value>pulaski</value>
        </filters>
        <label>Pulaski &amp; middleman</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Credit References Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit References OLD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>